Fix subject list alignment in Home page

--- a/client-app/src/components/pages/Home.module.scss
+++ b/client-app/src/components/pages/Home.module.scss
@@ -1,24 +1,12 @@
 @import "styles/colors";
 
-.content {
-    text-align: center;
-    background-color: $light-grey;
-    border-radius: 15px;
-    filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.25));
-
-    padding-bottom: 20px;
-}
-
-.gif {
-    width: 20%;
-}
-
 .columnContainer {
     display: flex;
     
     flex-flow: column wrap;
     
     justify-content: space-around;
+    align-items: center;
     
     padding: 15px;
     gap: 10px;
@@ -40,9 +28,28 @@
 .subjectContainer {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: start;
     border-radius: 15px;
     gap: 15px;
+    
+    height: 4em;
+    line-height: 4em;
+    @media (max-width: 400px) {
+        height: 2em;
+        line-height: 2em;
+    }
+}
+
+.subjectContainer p {
+    margin: 0;
+}
+
+.subjectsList {
+    width: fit-content;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: stretch;
+    padding: 0;
 }
 
 .createButton {
@@ -61,6 +68,5 @@
 }
 
 .png {
-    width: 5;
-    height: 10%;
+    height: 100%;
 }
